--- a/autoDMP.ini
+++ b/autoDMP.ini
@@ -1,6 +1,6 @@
 [Window][MainDockSpace]
 Pos=0,0
-Size=2048,1059
+Size=1920,987
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,8 +9,8 @@ Size=400,400
 Collapsed=0
 
 [Window][StatusBar]
-Pos=0,1058
-Size=2048,32
+Pos=0,986
+Size=1920,32
 Collapsed=0
 
 [Window][Raw Image Capture]
@@ -49,26 +49,26 @@ Collapsed=0
 DockId=0x0000000F,0
 
 [Window][Pump Setup]
-Pos=1111,555
-Size=937,504
+Pos=1374,555
+Size=546,432
 Collapsed=0
 DockId=0x00000016,0
 
 [Window][Ctrl Setup]
-Pos=1111,21
-Size=937,532
+Pos=1374,21
+Size=546,532
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][SysId Setup]
-Pos=1111,21
-Size=627,1038
+Pos=989,21
+Size=642,966
 Collapsed=0
 DockId=0x0000000E,0
 
 [Window][SysID]
-Pos=1111,21
-Size=505,1038
+Pos=989,21
+Size=411,966
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -84,42 +84,65 @@ Collapsed=0
 
 [Window][Channels]
 Pos=0,21
-Size=627,1038
+Size=426,966
 Collapsed=0
 DockId=0x00000013,0
 
 [Window][Image Processing]
-Pos=629,21
-Size=480,1038
+Pos=428,21
+Size=944,966
 Collapsed=0
 DockId=0x00000011,0
 
 [Window][Image Processing Setup]
-Pos=1124,21
-Size=267,1038
+Pos=666,21
+Size=267,966
 Collapsed=0
 DockId=0x00000015,0
 
+[Table][0x475FE97E,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xC51D6398,5]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+Column 3  Weight=1.0000
+Column 4  Weight=1.0000
+
+[Table][0x2279FEB5,4]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+Column 3  Weight=1.0000
+
+[Table][0xA9513BD8,4]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+Column 3  Weight=1.0000
+
 [Docking][Data]
-DockSpace             ID=0xC3C5E3D9 Window=0xDEDC5B90 Pos=0,21 Size=2048,1038 Split=X
-  DockNode            ID=0x00000013 Parent=0xC3C5E3D9 SizeRef=627,1038 Selected=0x0992BDDB
-  DockNode            ID=0x00000014 Parent=0xC3C5E3D9 SizeRef=1419,1038 Split=X
-    DockNode          ID=0x00000011 Parent=0x00000014 SizeRef=480,1038 Selected=0x132954D7
-    DockNode          ID=0x00000012 Parent=0x00000014 SizeRef=937,1038 Split=X
+DockSpace             ID=0xC3C5E3D9 Window=0xDEDC5B90 Pos=0,21 Size=1920,966 Split=X
+  DockNode            ID=0x00000013 Parent=0xC3C5E3D9 SizeRef=426,1038 Selected=0x0992BDDB
+  DockNode            ID=0x00000014 Parent=0xC3C5E3D9 SizeRef=1492,1038 Split=X
+    DockNode          ID=0x00000011 Parent=0x00000014 SizeRef=944,1038 Selected=0x132954D7
+    DockNode          ID=0x00000012 Parent=0x00000014 SizeRef=546,1038 Split=X
       DockNode        ID=0x00000004 Parent=0x00000012 SizeRef=175,966 Split=Y Selected=0x7DA48818
         DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=957,290 Selected=0x7DA48818
         DockNode      ID=0x00000007 Parent=0x00000004 SizeRef=957,674 Split=Y Selected=0x40C4A1A8
           DockNode    ID=0x00000008 Parent=0x00000007 SizeRef=175,337 Selected=0x40C4A1A8
           DockNode    ID=0x00000009 Parent=0x00000007 SizeRef=175,335 Selected=0x0764DB78
       DockNode        ID=0x00000005 Parent=0x00000012 SizeRef=1743,966 Split=X
-        DockNode      ID=0x00000001 Parent=0x00000005 SizeRef=627,966 Split=X Selected=0x7C819FC7
+        DockNode      ID=0x00000001 Parent=0x00000005 SizeRef=642,966 Split=X Selected=0x7C819FC7
           DockNode    ID=0x0000000B Parent=0x00000001 SizeRef=898,966 Split=Y Selected=0x7C819FC7
             DockNode  ID=0x0000000F Parent=0x0000000B SizeRef=431,932 Selected=0x7C819FC7
             DockNode  ID=0x00000010 Parent=0x0000000B SizeRef=431,32 Selected=0x820FDA7D
           DockNode    ID=0x0000000C Parent=0x00000001 SizeRef=551,966 Split=X Selected=0xEEEF5479
-            DockNode  ID=0x0000000D Parent=0x0000000C SizeRef=505,966 Selected=0xEEEF5479
-            DockNode  ID=0x0000000E Parent=0x0000000C SizeRef=120,966 Selected=0xC8E63945
-        DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=308,966 Split=Y Selected=0x97A5C2A5
+            DockNode  ID=0x0000000D Parent=0x0000000C SizeRef=411,966 Selected=0xEEEF5479
+            DockNode  ID=0x0000000E Parent=0x0000000C SizeRef=229,966 Selected=0xC8E63945
+        DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=287,966 Split=Y Selected=0x97A5C2A5
           DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=290,532 Selected=0x8A802616
           DockNode    ID=0x0000000A Parent=0x00000002 SizeRef=290,432 Split=X Selected=0x97A5C2A5
             DockNode  ID=0x00000015 Parent=0x0000000A SizeRef=267,1038 Selected=0x83569755
