--- a/autoDMP.ini
+++ b/autoDMP.ini
@@ -1,6 +1,6 @@
 [Window][MainDockSpace]
 Pos=0,0
-Size=1920,987
+Size=2048,1059
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,8 +9,8 @@ Size=400,400
 Collapsed=0
 
 [Window][StatusBar]
-Pos=0,986
-Size=1920,32
+Pos=0,1058
+Size=2048,32
 Collapsed=0
 
 [Window][Raw Image Capture]
@@ -49,8 +49,8 @@ Collapsed=0
 DockId=0x0000000F,0
 
 [Window][Pump Setup]
-Pos=1422,555
-Size=498,432
+Pos=1463,21
+Size=585,1038
 Collapsed=0
 DockId=0x00000016,0
 
@@ -84,21 +84,27 @@ Collapsed=0
 
 [Window][Channels]
 Pos=0,21
-Size=521,966
+Size=606,1038
 Collapsed=0
 DockId=0x00000013,0
 
 [Window][Image Processing]
-Pos=523,21
-Size=897,966
+Pos=608,1027
+Size=853,32
 Collapsed=0
-DockId=0x00000011,0
+DockId=0x00000018,0
 
 [Window][Image Processing Setup]
-Pos=643,21
-Size=455,966
+Pos=855,21
+Size=455,1038
 Collapsed=0
 DockId=0x00000015,0
+
+[Window][Proc Image]
+Pos=608,21
+Size=853,1004
+Collapsed=0
+DockId=0x00000017,0
 
 [Table][0x475FE97E,2]
 Column 0  Weight=1.0000
@@ -124,11 +130,13 @@ Column 2  Weight=1.0000
 Column 3  Weight=1.0000
 
 [Docking][Data]
-DockSpace             ID=0xC3C5E3D9 Window=0xDEDC5B90 Pos=0,21 Size=1920,966 Split=X
-  DockNode            ID=0x00000013 Parent=0xC3C5E3D9 SizeRef=521,1038 Selected=0x0992BDDB
-  DockNode            ID=0x00000014 Parent=0xC3C5E3D9 SizeRef=1397,1038 Split=X
-    DockNode          ID=0x00000011 Parent=0x00000014 SizeRef=897,1038 Selected=0x132954D7
-    DockNode          ID=0x00000012 Parent=0x00000014 SizeRef=498,1038 Split=X
+DockSpace             ID=0xC3C5E3D9 Window=0xDEDC5B90 Pos=0,21 Size=2048,1038 Split=X
+  DockNode            ID=0x00000013 Parent=0xC3C5E3D9 SizeRef=606,1038 Selected=0x0992BDDB
+  DockNode            ID=0x00000014 Parent=0xC3C5E3D9 SizeRef=1440,1038 Split=X
+    DockNode          ID=0x00000011 Parent=0x00000014 SizeRef=853,1038 Split=Y Selected=0x080A23F9
+      DockNode        ID=0x00000017 Parent=0x00000011 SizeRef=853,1004 Selected=0x080A23F9
+      DockNode        ID=0x00000018 Parent=0x00000011 SizeRef=853,32 Selected=0x132954D7
+    DockNode          ID=0x00000012 Parent=0x00000014 SizeRef=585,1038 Split=X
       DockNode        ID=0x00000004 Parent=0x00000012 SizeRef=175,966 Split=Y Selected=0x7DA48818
         DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=957,290 Selected=0x7DA48818
         DockNode      ID=0x00000007 Parent=0x00000004 SizeRef=957,674 Split=Y Selected=0x40C4A1A8
