--- a/autoDMP.ini
+++ b/autoDMP.ini
@@ -15,8 +15,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Pump Setup]
-Pos=1461,21
-Size=459,995
+Pos=1722,21
+Size=198,995
 Collapsed=0
 DockId=0x00000002,0
 
@@ -40,7 +40,7 @@ DockId=0x0000000D,0
 
 [Window][Channels]
 Pos=925,21
-Size=227,995
+Size=744,995
 Collapsed=0
 DockId=0x00000009,0
 
@@ -63,7 +63,7 @@ Collapsed=0
 DockId=0x0000000B,0
 
 [Window][ImPlot Demo]
-Pos=737,131
+Pos=367,115
 Size=600,750
 Collapsed=0
 
@@ -84,10 +84,20 @@ Collapsed=0
 DockId=0x0000000F,0
 
 [Window][Real Time Plot]
-Pos=1154,21
-Size=766,995
+Pos=1126,21
+Size=794,995
 Collapsed=0
 DockId=0x0000000B,0
+
+[Window][Example: Console]
+Pos=883,291
+Size=520,600
+Collapsed=0
+
+[Window][Example: Log]
+Pos=60,60
+Size=500,400
+Collapsed=0
 
 [Table][0x475FE97E,2]
 Column 0  Weight=1.0000
@@ -132,18 +142,18 @@ Column 2  Weight=1.0000
 DockSpace           ID=0xC3C5E3D9 Window=0xDEDC5B90 Pos=0,21 Size=1920,995 Split=X
   DockNode          ID=0x0000000F Parent=0xC3C5E3D9 SizeRef=923,995 Selected=0x820FDA7D
   DockNode          ID=0x00000010 Parent=0xC3C5E3D9 SizeRef=995,995 Split=X
-    DockNode        ID=0x00000003 Parent=0x00000010 SizeRef=227,1067 Split=X Selected=0x132954D7
+    DockNode        ID=0x00000003 Parent=0x00000010 SizeRef=744,1067 Split=X Selected=0x132954D7
       DockNode      ID=0x00000009 Parent=0x00000003 SizeRef=262,728 Selected=0x0992BDDB
       DockNode      ID=0x0000000A Parent=0x00000003 SizeRef=191,728 Split=Y Selected=0x080A23F9
         DockNode    ID=0x00000007 Parent=0x0000000A SizeRef=1110,961 Split=X Selected=0x080A23F9
           DockNode  ID=0x0000000D Parent=0x00000007 SizeRef=445,1033 Selected=0x080A23F9
           DockNode  ID=0x0000000E Parent=0x00000007 SizeRef=571,1033 Selected=0xEEEF5479
         DockNode    ID=0x00000008 Parent=0x0000000A SizeRef=1110,32 Selected=0x132954D7
-    DockNode        ID=0x00000004 Parent=0x00000010 SizeRef=766,1067 Split=X
+    DockNode        ID=0x00000004 Parent=0x00000010 SizeRef=249,1067 Split=X
       DockNode      ID=0x00000005 Parent=0x00000004 SizeRef=448,1067 Selected=0x83569755
       DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=461,1067 Split=X
-        DockNode    ID=0x0000000B Parent=0x00000006 SizeRef=534,1067 CentralNode=1 Selected=0x3AD9D0B8
-        DockNode    ID=0x0000000C Parent=0x00000006 SizeRef=459,1067 Split=Y Selected=0x97A5C2A5
+        DockNode    ID=0x0000000B Parent=0x00000006 SizeRef=49,1067 CentralNode=1 Selected=0x3AD9D0B8
+        DockNode    ID=0x0000000C Parent=0x00000006 SizeRef=198,1067 Split=Y Selected=0x97A5C2A5
           DockNode  ID=0x00000001 Parent=0x0000000C SizeRef=207,538 Selected=0x8A802616
           DockNode  ID=0x00000002 Parent=0x0000000C SizeRef=207,455 Selected=0x97A5C2A5
 
