--- a/autoDMP.ini
+++ b/autoDMP.ini
@@ -1,11 +1,11 @@
 [Window][MainDockSpace]
 Pos=0,0
-Size=2048,1088
+Size=1920,1016
 Collapsed=0
 
 [Window][Ctrl Setup]
-Pos=1760,21
-Size=288,577
+Pos=1632,21
+Size=288,865
 Collapsed=0
 DockId=0x00000001,0
 
@@ -15,8 +15,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Pump Setup]
-Pos=1760,600
-Size=288,488
+Pos=1632,21
+Size=288,865
 Collapsed=0
 DockId=0x00000002,0
 
@@ -40,7 +40,7 @@ DockId=0x0000000D,0
 
 [Window][Channels]
 Pos=964,21
-Size=744,1067
+Size=744,865
 Collapsed=0
 DockId=0x00000009,0
 
@@ -79,7 +79,7 @@ Collapsed=0
 
 [Window][Raw Image Capture]
 Pos=0,21
-Size=962,1067
+Size=962,865
 Collapsed=0
 DockId=0x0000000F,0
 
@@ -98,6 +98,12 @@ Collapsed=0
 Pos=60,60
 Size=500,400
 Collapsed=0
+
+[Window][Console]
+Pos=0,888
+Size=1920,128
+Collapsed=0
+DockId=0x00000012,0
 
 [Table][0x475FE97E,2]
 Column 0  Weight=1.0000
@@ -134,21 +140,23 @@ Column 2  Weight=1.0000
 Column 3  Weight=1.0000
 
 [Docking][Data]
-DockSpace           ID=0xC3C5E3D9 Window=0xDEDC5B90 Pos=0,21 Size=2048,1067 Split=X
-  DockNode          ID=0x0000000F Parent=0xC3C5E3D9 SizeRef=962,995 Selected=0x820FDA7D
-  DockNode          ID=0x00000010 Parent=0xC3C5E3D9 SizeRef=1084,995 Split=X
-    DockNode        ID=0x00000003 Parent=0x00000010 SizeRef=744,1067 Split=X Selected=0x132954D7
-      DockNode      ID=0x00000009 Parent=0x00000003 SizeRef=262,728 Selected=0x0992BDDB
-      DockNode      ID=0x0000000A Parent=0x00000003 SizeRef=191,728 Split=Y Selected=0x080A23F9
-        DockNode    ID=0x00000007 Parent=0x0000000A SizeRef=1110,961 Split=X Selected=0x080A23F9
-          DockNode  ID=0x0000000D Parent=0x00000007 SizeRef=445,1033 Selected=0x080A23F9
-          DockNode  ID=0x0000000E Parent=0x00000007 SizeRef=571,1033 Selected=0xEEEF5479
-        DockNode    ID=0x00000008 Parent=0x0000000A SizeRef=1110,32 Selected=0x132954D7
-    DockNode        ID=0x00000004 Parent=0x00000010 SizeRef=249,1067 Split=X
-      DockNode      ID=0x00000005 Parent=0x00000004 SizeRef=448,1067 Selected=0x83569755
-      DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=461,1067 Split=X
-        DockNode    ID=0x0000000B Parent=0x00000006 SizeRef=48,1067 CentralNode=1 Selected=0x3AD9D0B8
-        DockNode    ID=0x0000000C Parent=0x00000006 SizeRef=288,1067 Split=Y Selected=0x97A5C2A5
-          DockNode  ID=0x00000001 Parent=0x0000000C SizeRef=207,538 Selected=0x8A802616
-          DockNode  ID=0x00000002 Parent=0x0000000C SizeRef=207,455 Selected=0x97A5C2A5
+DockSpace             ID=0xC3C5E3D9 Window=0xDEDC5B90 Pos=0,21 Size=1920,995 Split=Y
+  DockNode            ID=0x00000011 Parent=0xC3C5E3D9 SizeRef=2048,865 Split=X
+    DockNode          ID=0x0000000F Parent=0x00000011 SizeRef=962,995 Selected=0x820FDA7D
+    DockNode          ID=0x00000010 Parent=0x00000011 SizeRef=1084,995 Split=X
+      DockNode        ID=0x00000003 Parent=0x00000010 SizeRef=744,1067 Split=X Selected=0x132954D7
+        DockNode      ID=0x00000009 Parent=0x00000003 SizeRef=262,728 Selected=0x0992BDDB
+        DockNode      ID=0x0000000A Parent=0x00000003 SizeRef=191,728 Split=Y Selected=0x080A23F9
+          DockNode    ID=0x00000007 Parent=0x0000000A SizeRef=1110,961 Split=X Selected=0x080A23F9
+            DockNode  ID=0x0000000D Parent=0x00000007 SizeRef=445,1033 Selected=0x080A23F9
+            DockNode  ID=0x0000000E Parent=0x00000007 SizeRef=571,1033 Selected=0xEEEF5479
+          DockNode    ID=0x00000008 Parent=0x0000000A SizeRef=1110,32 Selected=0x132954D7
+      DockNode        ID=0x00000004 Parent=0x00000010 SizeRef=249,1067 Split=X
+        DockNode      ID=0x00000005 Parent=0x00000004 SizeRef=448,1067 Selected=0x83569755
+        DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=461,1067 Split=X
+          DockNode    ID=0x0000000B Parent=0x00000006 SizeRef=48,1067 CentralNode=1 Selected=0x3AD9D0B8
+          DockNode    ID=0x0000000C Parent=0x00000006 SizeRef=288,1067 Split=Y Selected=0x97A5C2A5
+            DockNode  ID=0x00000001 Parent=0x0000000C SizeRef=207,538 Selected=0x8A802616
+            DockNode  ID=0x00000002 Parent=0x0000000C SizeRef=207,455 Selected=0x97A5C2A5
+  DockNode            ID=0x00000012 Parent=0xC3C5E3D9 SizeRef=2048,128 Selected=0x49278EEE
 
